# python-project-49

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  game_logic.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calculator.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
