[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This project using the terminal helps you to play brain games"
authors = ["Ivan Popov <ma1n.py@ya.ru>"]
readme = "README.md"
repository = "https://github.com/depocoder/python-project-49"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calculator:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"
flake8-isort = "^6.1.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
